--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .btn {
+    @apply h-7 hover:text-gray-400 cursor-pointer;
+  }
+}
